--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gabriel Bullerman</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Evan Shiber</title>
+    <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
@@ -22,14 +22,14 @@
 
     <section id="About-Me" class="full-screen-section">
         <div class="container about-container">
-            <img src="./me.jpg" alt="Profile Photo" class="profile-photo">
+            <img src="images\SelfPicture.jpg" alt="Profile Photo" class="profile-photo">
             <div class="about-text">
-                <h1>Gabriel John Bullerman</h1>
+                <h1>Evan Shiber</h1>
                 <h1 class="hero--section--title">
                     <span></span>
                     <span class="typed-cursor typed-cursor--blink" aria-hidden="true">|</span>
                 </h1>
-                <p>Undergraduate Computer Science major at Iowa State University. Interested in full-stack development, mobile apps, and webapps.</p>
+                <p>Cyber Security Engineering student at Iowa State University.</p>
             </div>
         </div>
     </section>
@@ -64,7 +64,7 @@
         <div class="container">
             <h2>Projects</h2>
             <div class="project">
-                <img src="./MusiQuest Logo.png" alt="Project 1" height="200" width="200">
+                <img src="https://via.placeholder.com/200" alt="Project 1" height="200" width="200">
                 <h3>Mobile App</h3>
                 <p>MusiQuest is an android application created using Java consisting of multiple activity pages, and several operations communicating with the server and database which was created by my team and I. MusiQuest is an application intended for use of those teaching, or learning music theory in the form of a quiz-style game. MusiQuest has multiple WebSocket features such as a global chat, friends list, and a global leaderboard per level. If you'd like to learn more about this project, click <em><a href="#">here.</a></em></p>
             </div>
@@ -83,20 +83,20 @@
 
     <section id="Contact" class="box">
         <div class="container contact-container">
-            <h2>Contact Me</h2>
+            <h2>Contact</h2>
             <ul class="contact">
-                <li><i class="fa-brands fa-linkedin"></i> <a href="https://www.linkedin.com/in/gabe-bullerman/">LinkedIn</a></li>
-                <li><i class="fa-solid fa-envelope"></i> <a href="mailto:gabebullerman1@gmail.com">gabebullerman1@gmail.com</a></li>
-                <li><i class="fa-solid fa-phone"></i> 319-230-0474</li>
+                <li><i class="fa-brands fa-linkedin"></i> <a href="https://www.linkedin.com/in/evan-shiber/">LinkedIn</a></li>
+                <li><i class="fa-solid fa-envelope"></i> <a href="mailto:shiberevan@gmail.com">shiberevan@gmail.com</a></li>
+                <li><i class="fa-solid fa-phone"></i> 201-937-5702</li>
             </ul>
         </div>
     </section>
     
-    <script src="portfolio.js"></script>
+    <script src="script.js"></script>
     
     <footer>
         <div class="container">
-            <p>&copy; 2024 Gabriel Bullerman</p>
+            <p>&copy; 2024 Evan Shiber</p>
         </div>
     </footer>
     </body>
