--- a/index.html
+++ b/index.html
@@ -39,22 +39,22 @@
             <h2>Technical Skills</h2>
             <div class="skills">
                 <div class="skill-category">
-                    <strong>Security:</strong><br>  Kali Linux <br> JavaScript <br> Python<br> C/C++<br> HTML<br> CSS<br> SQL
+                    <strong>Security:</strong><br>  Kali Linux <br> Pen-Testing <br> Wireshark<br> Nmap<br> pfSense<br> IDS/IPS<br> SQL
                 </div>
             </div>
             <div class="skills">
                 <div class="skill-category">
-                    <strong>Software:</strong><br>  React<br>  Node.js<br>  Express<br>  Bootstrap<br>  Tailwind
+                    <strong>Software:</strong><br>  Java<br>  Python<br>  SQL<br>  MIPS Assembly<br>  LaTeX
                 </div>
             </div>
             <div class="skills">
                 <div class="skill-category">
-                    <strong>Developer Tools:</strong><br>  Git<br>  GitHub<br>  VSCode<br>  IntelliJ<br>  Eclipse<br>  Android Studio
+                    <strong>Developer Tools:</strong><br>  Git<br>  Postman API<br>  CI/CD<br>  VS Code<br>  Quartus Prime<br>  Eclipse
                 </div>
             </div>
             <div class="skills">
                 <div class="skill-category">
-                    <strong>Libraries:</strong><br>  React<br>  Express<br>  Socket.io<br>  Axios<br>  Mongoose<br>  MongoDB
+                    <strong>Other:</strong><br>   AI Prompting<br>  SIEM<br>  MITRE ATT&CK<br>   Cryptography<br>  Mongoose<br>  MongoDB
                 </div>
             </div>
         </div>
