--- a/index.html
+++ b/index.html
@@ -66,7 +66,10 @@
             <div class="project">
                 <img src="https://via.placeholder.com/200" alt="Project 1" height="200" width="200">
                 <h3>Student Schedule Android App</h3>
-                <i class="fa-brands fa-java" class="fa-brands fa-git-alt"></i> <!-- Git icon -->
+                <div class="icons">
+                    <i class="fa-brands fa-java"></i> <!-- Java Icon -->
+                    <i class="fa-brands fa-git-alt"></i> <!-- Git Icon -->
+                </div>
                 <p>Students can see course descriptions, register for courses, and leave reviews/ratings for taken courses/professors.<br> 
                     Employed WebSocket for real-time chat between students and advisors, along with advisors and administrators.<br>
                     Implemented user authentication for Privileged Access Management for Admin, Advisor, and Student user types. <br>
@@ -86,7 +89,7 @@
                     If you'd like to learn more about this project, click <em><a href="#">here.</a></em></p>
             </div>
         </div>
-    </section>
+    </section>    
 
     <section id="Contact" class="box">
         <div class="container contact-container">
