--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <div class="container">
             <h2>Projects</h2>
             <div class="project">
-                <img src="https://via.placeholder.com/200" alt="Project 1" height="200" width="200">
+                <img src="https://via.placeholder.com/200" alt="Project 1" height="200" width="200" class="Project-icon">
                 <h3>Student Schedule Android App</h3>
                 <div class="icons">
                     <i class="fa-brands fa-java"></i> <!-- Java Icon -->
@@ -77,13 +77,13 @@
                     If you'd like to learn more about this project, click <em><a href="#">here.</a></em></p>
             </div>
             <div class="project">
-                <img src="https://via.placeholder.com/200" alt="Project 2" height="200" width="200">
+                <img src="https://via.placeholder.com/200" alt="Project 2" height="200" width="200" class="Project-icon">
                 <h3>Digital Logic Circuit</h3>
                 <p>Created and employed a Finite State Machine (FSM), a 16-bit binary counter, a register file, a ripple-carry adder, multiple seven-segment displays, and user-controlled inputs on an Altera DE2-115 Cyclone IV FPGA. <br>
                     If you'd like to learn more about this project, click <em><a href="#">here.</a></em></p>
             </div>
             <div class="project">
-                <img src="https://via.placeholder.com/200" alt="Project 3" height="200" width="200">
+                <img src="https://via.placeholder.com/200" alt="Project 3" height="200" width="200" class="Project-icon">
                 <h3>Placeholder Project</h3>
                 <p>This is a placeholder for a future project. <br>
                     Details about this project will be added soon. <br>
