--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Evan Shiber</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"> <!-- fontawesome-->
+    <link rel="stylesheet" type='text/css' href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css"> <!-- devicon.dev-->
 </head>
 <body>
     <header>
@@ -64,12 +65,13 @@
         <div class="container">
             <h2>Projects</h2>
             <div class="project">
-                <img src="https://via.placeholder.com/200" alt="Project 1" height="200" width="200" class="Project-icon">
+                <img src="https://via.placeholder.com/200" alt="Project 1" height="200" width="200" class="Project-thumbnail">
                 <h3>Student Schedule Android App</h3>
                 <div class="icons">
                     <i class="fa-brands fa-java"></i> <!-- Java Icon -->
                     <i class="fa-brands fa-git-alt"></i> <!-- Git Icon -->
-                    <img src="images/CICD_icon.png" alt="CI/CD Icon" class="CI-CD-icon">
+                    <img src="images/CICD_icon.png" alt="CI/CD Icon" class="CI-CD-icon"> <!-- CI/CD Icon -->            
+                    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/postman/postman-original.svg" class="project-icon"> <!-- Postman Icon -->
                 </div>
                 <p>Students can see course descriptions, register for courses, and leave reviews/ratings for taken courses/professors.<br> 
                     Employed WebSocket for real-time chat between students and advisors, along with advisors and administrators.<br>
@@ -77,13 +79,13 @@
                     If you'd like to learn more about this project, click <em><a href="#">here.</a></em></p>
             </div>
             <div class="project">
-                <img src="https://via.placeholder.com/200" alt="Project 2" height="200" width="200" class="Project-icon">
+                <img src="https://via.placeholder.com/200" alt="Project 2" height="200" width="200" class="Project-thumbnail">
                 <h3>Digital Logic Circuit</h3>
                 <p>Created and employed a Finite State Machine (FSM), a 16-bit binary counter, a register file, a ripple-carry adder, multiple seven-segment displays, and user-controlled inputs on an Altera DE2-115 Cyclone IV FPGA. <br>
                     If you'd like to learn more about this project, click <em><a href="#">here.</a></em></p>
             </div>
             <div class="project">
-                <img src="https://via.placeholder.com/200" alt="Project 3" height="200" width="200" class="Project-icon">
+                <img src="https://via.placeholder.com/200" alt="Project 3" height="200" width="200" class="Project-thumbnail">
                 <h3>Placeholder Project</h3>
                 <p>This is a placeholder for a future project. <br>
                     Details about this project will be added soon. <br>
